Fix footer not displaying properly on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -197,8 +197,11 @@ nav.desktop a {
     padding: 0 15px;
 }
 
-main {
+#main {
     transform-origin: top left;
+}
+
+main {
     padding-top: 69px;
 }
 
